# cmake-catch2-singlefile

./: CMakeLists.txt  fact.cpp  fact_test.cpp
